--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,4 +4,12 @@ import Button from '../components/button.js'
 
 Look, a button! 👇
 
+Look, a button! 👇
+
+Look, a button! 👇
+
+Look, a button! 👇
+
+안녕
+
 <Button>👋 Hello</Button>
